tools/hrw4u/tests/data/hooks/inbound_resp_section.fail.error.txt
tests/data/hooks/inbound_resp_section.fail.input.txt:2:4: error: inbound.resp.X-Test is not available in the REMAP section
   2 |     inbound.resp.X-Test = "should fail";
     |     ^
